fixed embed width on mobile devices

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -820,6 +820,9 @@ section.page-template {
       @media #{$small-device} {
         width: 100%;
       }
+      iframe {
+        width: 100%;
+      }
     }
   }
 }
